--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /LVRMWebAPI/bin/Debug/netcoreapp3.1
+/.vs
+/LVRMWebAPI/.vs/LVRMWebAPI
+/LVRMWebAPI/obj
