changes review save

--- a/LVRMWebAPI/LVRMWebAPI.csproj
+++ b/LVRMWebAPI/LVRMWebAPI.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RestSharp.CoreNet" Version="105.2.4-rc4-24214-03" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
