--- a/LVRMWebAPI/appsettings.json
+++ b/LVRMWebAPI/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     "DBConnectionPSM": "Data Source=tcp:i6oix57t40.database.windows.net,1433;Database=PSM2013;User ID=PSMAdmin@i6oix57t40;Password=Psm_13567!;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+  },
+  "AppSettings": {
+    "spiderman-token": "0ded0923c6537d61c5d8b0dd03877b0e46b8ac73"
   }
 }
